Remove unused bootstrap& tweenmax scripts& update text js styling

--- a/blagdon.html
+++ b/blagdon.html
@@ -147,7 +147,7 @@
 					</footer>
 
 					<!--Scripts-->
-					<script>
+					<script type="text/javascript">
 						var locations = [
                         ['Blagdon Lake', 51.3348101, -2.7040838]//call map location for marker
                     ];
@@ -186,18 +186,6 @@
 					<!--Popper-->
 					<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 
-					<!--Bootstrap library-->
-					<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
-					<!--gsap& tweenmax libraries, apply to banner-->
-					<script>
-						https://cdnjs.cloudflare.com/ajax/libs/timelinejs/3.6.6/js/timeline-min.js
-					</script>
-
-					<script>
-						https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.0/gsap.min.js
-					</script>
-
 					<!--texts JS-->
 					<script src="assets/js/text.js"></script>
 
@@ -207,9 +195,6 @@
 					<!--Navigation bar JS-->
 					<script src="assets/js/nav.js"></script>
 
-					<!--Maps JS-->
-					<script src="assets/js/maps.js"></script>
-
 					<!--Slideshow JS-->
 					<script src="assets/js/slide.js"></script>
 
@@ -218,7 +203,6 @@
 					<script async defer
 						src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwkm-Zl_LpT63IFWXzmGhS8i6vZFf9dM8&callback=initMap">
 					</script>
-
 
 					<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
