--- a/cheddar-gorge.html
+++ b/cheddar-gorge.html
@@ -142,7 +142,7 @@
 						</div>
 					</footer>
 
-					<script>
+					<script type="text/javascript">
 						var locations = [
                         ['Cheddar Gorge', 51.2863881, -2.7690326, 1]//call map location for marker
                     ];
@@ -182,18 +182,6 @@
 					<!--Popper-->
 					<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 
-					<!--Bootstrap library-->
-					<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
-					<!--gsap& tweenmax libraries, apply to banner-->
-					<script>
-						https://cdnjs.cloudflare.com/ajax/libs/timelinejs/3.6.6/js/timeline-min.js
-					</script>
-
-					<script>
-						https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.0/gsap.min.js
-					</script>
-
 					<!--texts JS-->
 					<script src="assets/js/text.js"></script>
 
@@ -203,17 +191,12 @@
 					<!--Navigation bar JS-->
 					<script src="assets/js/nav.js"></script>
 
-					<!--Maps JS-->
-					<script src="assets/js/maps.js"></script>
-
 					<!--Slideshow JS-->
 					<script src="assets/js/slide.js"></script>
 
 					<!--Google maps scripts-->
 
-					<script async defer
-						src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwkm-Zl_LpT63IFWXzmGhS8i6vZFf9dM8&callback=initMap">
-					</script>
+					<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwkm-Zl_LpT63IFWXzmGhS8i6vZFf9dM8&callback=initMap"></script>
 
 
 					<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
