--- a/exmoor.html
+++ b/exmoor.html
@@ -143,7 +143,7 @@
 						</div>
 					</footer>
 
-					<script>
+					<script type="text/javascript">
 						var locations = [
                         ['Exmoor National Park', 51.040565, -3.5551257]//call map location for marker
                     ];
@@ -181,18 +181,6 @@
 					<!--Popper-->
 					<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 
-					<!--Bootstrap library-->
-					<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
-					<!--gsap& tweenmax libraries, apply to banner-->
-					<script>
-						https://cdnjs.cloudflare.com/ajax/libs/timelinejs/3.6.6/js/timeline-min.js
-					</script>
-
-					<script>
-						https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.0/gsap.min.js
-					</script>
-
 					<!--texts JS-->
 					<script src="assets/js/text.js"></script>
 
@@ -201,9 +189,6 @@
 
 					<!--Navigation bar JS-->
 					<script src="assets/js/nav.js"></script>
-
-					<!--Maps JS-->
-					<script src="assets/js/maps.js"></script>
 
 					<!--Slideshow JS-->
 					<script src="assets/js/slide.js"></script>
