--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<!--Navigation, fixed at the top of page for ease of use-->
 
 	<nav class="topnav">
-		<a href="index.html" class="w3-bar-item w3-button w3-green" title="Home"><i class="fa fa-home"></i></a>
+        <a href="index.html" class="w3-bar-item w3-button w3-green" title="Home"><i class="fa fa-home"></i></a>
 		<div class="dropdown">
 			<button class="dropbtn">Somerset Trails
  <i class="fa fa-caret-down"></i>
@@ -71,14 +71,6 @@
 		</div>
 
 		<div class="slideshow-container">
-
-			<div class="mySlides fade">
-				<div class="numbertext">1 / 6</div>
-				<img src="assets/images/banner/cover-image.jpg" style="width:100%" alt="Home page banner">
-				<div class="container">
-					<button class="btn" onclick="document.location ='index.html'">Home</button>
-				</div>
-			</div>
 
 			<div class="mySlides fade">
 				<div class="numbertext">2 / 6</div>
@@ -124,7 +116,6 @@
 		<br>
 
 		<div style="text-align:center">
-			<span class="dot"></span>
 			<span class="dot"></span>
 			<span class="dot"></span>
 			<span class="dot"></span>
@@ -181,7 +172,7 @@
 		</footer>
 
 		<!--Scripts-->
-		<script>
+		<script type="text/javascript">
 			var locations = [
       ['Exmoor National Park', 51.040565, -3.5551257, 4],
       ['Somerset Coastal Path', 51.2072165, -3.4641482, 5],
@@ -223,18 +214,6 @@
 		<!--Popper-->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 
-		<!--Bootstrap library-->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
-		<!--gsap& tweenmax libraries, apply to banner-->
-		<script>
-			https://cdnjs.cloudflare.com/ajax/libs/timelinejs/3.6.6/js/timeline-min.js
-		</script>
-
-		<script>
-			https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.0/gsap.min.js
-		</script>
-
 		<!--texts JS-->
 		<script src="assets/js/text.js"></script>
 
@@ -244,14 +223,8 @@
 		<!--Navigation bar JS-->
 		<script src="assets/js/nav.js"></script>
 
-		<!--Maps JS-->
-		<script src="assets/js/maps.js"></script>
-
 		<!--Slideshow JS-->
 		<script src="assets/js/slide.js"></script>
-
-		<!--Banner JS-->
-		<script src="assets/js/banner.js"></script>
 
 		<!--Google maps scripts-->
 
