--- a/somerset-coastal.html
+++ b/somerset-coastal.html
@@ -145,7 +145,7 @@
 					</footer>
 
 					<!--Scripts-->
-					<script>
+					<script type="text/javascript">
 						var locations = [
                         ['Somerset Coastal Path', 50.215696, -5.4903855, 1]//call map location for marker
                     ];
@@ -185,18 +185,6 @@
 					<!--Popper-->
 					<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 
-					<!--Bootstrap library-->
-					<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
-					<!--gsap& tweenmax libraries, apply to banner-->
-					<script>
-						https://cdnjs.cloudflare.com/ajax/libs/timelinejs/3.6.6/js/timeline-min.js
-					</script>
-
-					<script>
-						https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.0/gsap.min.js
-					</script>
-
 					<!--texts JS-->
 					<script src="assets/js/text.js"></script>
 
@@ -205,9 +193,6 @@
 
 					<!--Navigation bar JS-->
 					<script src="assets/js/nav.js"></script>
-
-					<!--Maps JS-->
-					<script src="assets/js/maps.js"></script>
 
 					<!--Slideshow JS-->
 					<script src="assets/js/slide.js"></script>
