Add title to dropdown/up menu items& update screenshot images

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
  <i class="fa fa-caret-down"></i>
  </button>
 			<div class="dropdown-content">
-				<a href="staple.html">Staple Hill</a>
-				<a href="cheddar-gorge.html">Cheddar Gorge</a>
-				<a href="blagdon.html">Blagdon Lake</a>
-				<a href="somerset-coastal.html">Somerset Coastal Path</a>
-				<a href="exmoor.html">Exmoor National park</a>
+				<a href="staple.html" title="Staple Hill">Staple Hill</a>
+				<a href="cheddar-gorge.html" title="Cheddar Gorge">Cheddar Gorge</a>
+				<a href="blagdon.html" title="Blagdon Lake">Blagdon Lake</a>
+				<a href="somerset-coastal.html" title="Somerset Coastal Path">Somerset Coastal Path</a>
+				<a href="exmoor.html" title="Exmoor National Park">Exmoor National park</a>
 			</div>
 		</div>
 		<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
@@ -142,11 +142,11 @@
 			<div class="dropup">
 				<button class="dropbtn">Explore</button>
 				<div class="dropup-content">
-					<a href="staple.html">Staple Hill</a>
-					<a href="cheddar-gorge.html">Cheddar Gorge</a>
-					<a href="blagdon.html">Blagdon Lake</a>
-					<a href="somerset-coastal.html">West Somerset Coastal Path</a>
-					<a href="exmoor.html">Exmoor National Park</a>
+					<a href="staple.html" title="Staple Hill">Staple Hill</a>
+					<a href="cheddar-gorge.html" title="Cheddar Gorge">Cheddar Gorge</a>
+					<a href="blagdon.html" title="Blagdon Lake">Blagdon Lake</a>
+					<a href="somerset-coastal.html" title="West Somerset Coastal Path">West Somerset Coastal Path</a>
+					<a href="exmoor.html" title="Exmoor National Park">Exmoor National Park</a>
 				</div>
 			</div>
 			<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
