--- a/exmoor.html
+++ b/exmoor.html
@@ -4,20 +4,18 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!--WS3 Css-->
+	<!--WS3 Css, provide slideshow animation-->
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-	<!--font awesome-->
+	<!--font awesome, add site icons-->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<!--bootstrap-->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-	<!--css-->
+	<!--css, provide color& animation-->
 	<link href="assets/css/style.css" rel="stylesheet">
 
 	<title>Exmoor National Park</title>
 
 	<!--Favicon 32x32-->
 	<link rel="icon" type="image/png" sizes="32x32" href="..assets/images/favicon-32x32.png">
-	<!--Favicon 16x16-->
+	<!--Favicon 16x16, site icon-->
 	<link
 		href="https://raw.githubusercontent.com/michodgs24/Somerset-Trails/master/assets/css/images/favicon/favicon-16x16.png"
 		rel="#">
@@ -53,7 +51,7 @@
 	</nav>
 
 
-	<!--cover picture-->
+	<!--cover picture, welcome user to page-->
 
 	<section class="exmoor-banner">
 		<div class="exmoor-banner-outer">
@@ -62,7 +60,7 @@
 		</div>
 	</section>
 
-	<!--Slideshow section -->
+	<!--Slideshow section, provide user different images of trail -->
 
 	<div class="container">
 		<div>
@@ -91,7 +89,7 @@
 
 					</div>
 					<br>
-
+					<!--Inform user of which slide is active-->
 					<div style="text-align:center">
 						<span class="dot"></span>
 						<span class="dot"></span>
@@ -110,7 +108,7 @@
 					<!--Bottom navigation, for user flexibility-->
 
 					<br>
-
+					<!--allow user to navigate to a new trail whilst at bottom of page-->
 					<section class="bottom-nav">
 						<h6>Explore our trails</h6>
 						<div class="dropup">
@@ -120,7 +118,8 @@
 								<a href="staple.html" title="Staple Hill">Staple Hill</a>
 								<a href="cheddar-gorge.html" title="Cheddar Gorge">Cheddar Gorge</a>
 								<a href="blagdon.html" title="Blagdon Lake">Blagdon Lake</a>
-								<a href="somerset-coastal.html" title="West Somerset Coastal Path">West Somerset Coastal Path</a>
+								<a href="somerset-coastal.html" title="West Somerset Coastal Path">West Somerset Coastal
+									Path</a>
 							</div>
 						</div>
 						<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
@@ -132,7 +131,7 @@
 					<div>
 						<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 					</div>
-
+					<!--footer section, social media and inform user that the page has ended-->
 					<footer>
 						<div>
 							<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
@@ -144,8 +143,9 @@
 					</footer>
 
 					<script type="text/javascript">
+						//create location variable& assign latitude& longitude to trail
 						var locations = [
-                        ['Exmoor National Park', 51.040565, -3.5551257]//call map location for marker
+                        ['Exmoor National Park', 51.040565, -3.5551257]
                     ];
                     
                     var map;
@@ -158,13 +158,13 @@
                 var infowindow = new google.maps.InfoWindow();
 
     var marker, i;
-
+//call map window& create marker variable
     for (i = 0; i < locations.length; i++) {  
       marker = new google.maps.Marker({
         position: new google.maps.LatLng(locations[i][1], locations[i][2]),
         map: map
       });
-
+//add event listener, set markers to individual locations
       google.maps.event.addListener(marker, 'click', (function(marker, i) {
         return function() {
           infowindow.setContent(locations[i][0]);
