--- a/staple.html
+++ b/staple.html
@@ -4,20 +4,18 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!--WS3 Css-->
+	<!--WS3 Css, add slideshow animation-->
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-	<!--font awesome-->
+	<!--font awesome, add icons-->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<!--bootstrap-->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-	<!--css-->
+	<!--css, add color& animation-->
 	<link href="assets/css/style.css" rel="stylesheet">
 
 	<title>Staple Hill</title>
 
 	<!--Favicon 32x32-->
 	<link rel="icon" type="image/png" sizes="32x32" href="..assets/images/favicon-32x32.png">
-	<!--Favicon 16x16-->
+	<!--Favicon 16x16, site icon-->
 	<link
 		href="https://raw.githubusercontent.com/michodgs24/Somerset-Trails/master/assets/css/images/favicon/favicon-16x16.png"
 		rel="#">
@@ -32,7 +30,6 @@
 </head>
 
 <body>
-
 
 	<!--Navigation, fixed at the top of page for ease of use.-->
 
@@ -53,7 +50,7 @@
 		<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 	</nav>
 
-	<!--cover picture-->
+	<!--cover picture, welcomes user to page-->
 
 	<section class="staple-banner">
 		<div class="staple-banner-outer">
@@ -64,7 +61,7 @@
 
 	<br>
 
-	<!--Slideshow section -->
+	<!--Slideshow section, provide with different images of trail -->
 
 	<div class="container">
 		<div>
@@ -122,7 +119,8 @@
 								<a href="index.html" title="Home">Home</a>
 								<a href="cheddar-gorge.html" title="Cheddar Gorge">Cheddar Gorge</a>
 								<a href="blagdon.html" title="Blagdon Lake">Blagdon Lake</a>
-								<a href="somerset-coastal.html" title="West Somerset Coastal Path">West Somerset Coastal Path</a>
+								<a href="somerset-coastal.html" title="West Somerset Coastal Path">West Somerset Coastal
+									Path</a>
 								<a href="exmoor.html" title="Exmoor National Park">Exmoor National Park</a>
 							</div>
 						</div>
