--- a/blagdon.html
+++ b/blagdon.html
@@ -19,14 +19,6 @@
 	<link
 		href="https://raw.githubusercontent.com/michodgs24/Somerset-Trails/master/assets/css/images/favicon/favicon-16x16.png"
 		rel="#">
-
-	<!--map height& width-->
-	<style>
-		#map {
-			height: 30rem;
-			width: 100%;
-		}
-	</style>
 </head>
 
 <body>
@@ -103,7 +95,7 @@
 					<section>
 						<h2>Blagdon Lake Map</h2>
 						<br>
-						<div id="map">
+						<div class="map-custom">
 						</div>
 					</section>
 
@@ -146,17 +138,17 @@
 					</footer>
 
 					<!--Scripts-->
-					<script type="text/javascript">
+					<script>
 						//create locations variable& assign latitude& longitude to trail
 						var locations = [
-                        ['Blagdon Lake', 51.3348101, -2.7040838]
+                        ["Blagdon Lake", 51.3348101, -2.7040838]
                     ];
 
 						var map;
             //create map object, call id map and add elements to map object such as latitude& longitude
       function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: 51.3348101, lng: -2.7040838},
+map = new google.maps.Map(document.getElementsByClassName('map-custom')[0], {
+          center: {lat: 51.180000, lng: -3.000000},
           zoom: 14
         });
         //call map window& create marker variable
@@ -170,7 +162,7 @@
         map: map
       });
 //add event listener& set marker to trail location
-      google.maps.event.addListener(marker, 'click', (function(marker, i) {
+      google.maps.event.addListener(marker, "click", (function(marker, i) {
         return function() {
           infowindow.setContent(locations[i][0]);
           infowindow.open(map, marker);
@@ -188,26 +180,21 @@
 					<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 
 					<!--texts JS-->
-					<script src="assets/js/text.js"></script>
+					<script src="scripts/js/text.js"></script>
 
 					<!--Scroll button JS-->
-					<script src="assets/js/scroll.js"></script>
+					<script src="scripts/js/scroll.js"></script>
 
 					<!--Navigation bar JS-->
-					<script src="assets/js/nav.js"></script>
+					<script src="scripts/js/nav.js"></script>
 
 					<!--Slideshow JS-->
-					<script src="assets/js/slide.js"></script>
+					<script src="scripts/js/slide.js"></script>
 
 					<!--Google maps scripts-->
 
 					<script async defer
 						src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwkm-Zl_LpT63IFWXzmGhS8i6vZFf9dM8&callback=initMap">
-					</script>
-
-					<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-
-					<script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js">
 					</script>
 </body>
 
