--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 		<section>
 			<h2>Somerset Map</h2>
 			<br>
-			<div id="map">
+			<div class="map-custom">
 			</div>
 		</section>
 
@@ -170,19 +170,19 @@
 		</footer>
 
 		<!--Scripts-->
-		<script type="text/javascript">
+		<script>
 			//create variable locations, add latitude& longitude to each trail
 			var locations = [
-      ['Exmoor National Park', 51.040565, -3.5551257, 4],
-      ['Somerset Coastal Path', 51.2072165, -3.4641482, 5],
-      ['Staple Hill', 50.9445268, -3.0913381, 3],
-      ['Blagdon Lake', 51.3348101, -2.7040838, 2],
-      ['Cheddar Gorge', 51.2863881, -2.7690326, 1]
+      ["Exmoor National Park", 51.040565, -3.5551257, 4],
+      ["Somerset Coastal Path", 51.2072165, -3.4641482, 5],
+      ["Staple Hill", 50.9445268, -3.0913381, 3],
+      ["Blagdon Lake", 51.3348101, -2.7040838, 2],
+      ["Cheddar Gorge", 51.2863881, -2.7690326, 1]
     ];
 			var map;
             //create map object, call id map and add elements to map object such as latitude& longitude
       function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
+map = new google.maps.Map(document.getElementsByClassName("map-custom")[0], {
           center: {lat: 51.180000, lng: -3.000000},
           zoom: 9
         });
@@ -197,7 +197,7 @@
         map: map
       });
 //add event listener, set markers to individual locations
-      google.maps.event.addListener(marker, 'click', (function(marker, i) {
+      google.maps.event.addListener(marker, "click", (function(marker, i) {
         return function() {
           infowindow.setContent(locations[i][0]);
           infowindow.open(map, marker);
@@ -214,27 +214,22 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 
 		<!--texts JS-->
-		<script src="assets/js/text.js"></script>
+		<script src="scripts/js/text.js"></script>
 
 		<!--Scroll button JS-->
-		<script src="assets/js/scroll.js"></script>
+		<script src="scripts/js/scroll.js"></script>
 
 		<!--Navigation bar JS-->
-		<script src="assets/js/nav.js"></script>
+		<script src="scripts/js/nav.js"></script>
 
 		<!--Slideshow JS-->
-		<script src="assets/js/slide.js"></script>
+		<script src="scripts/js/slide.js"></script>
 
 		<!--Google maps scripts-->
 
 		<script async defer
 			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwkm-Zl_LpT63IFWXzmGhS8i6vZFf9dM8&callback=initMap">
 		</script>
-
-
-		<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-
-		<script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
 </body>
 
 </html>
