--- a/cheddar-gorge.html
+++ b/cheddar-gorge.html
@@ -4,11 +4,14 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!--WS3 Css, provide slideshow animation-->
+	
+    <!--WS3 Css, provide slideshow animation-->
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-	<!--font awesome, add site icons-->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<!--css, site color& animation-->
+	
+	<!--font awesome, provides social media icons-->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+	
+    <!--css, site color& animation-->
 	<link href="assets/css/style.css" rel="stylesheet">
 
 	<title>Cheddar gorge</title>
@@ -119,17 +122,21 @@
 					<br>
 
 					<!--Scroll back to top button-->
-					<div>
+					
+                    <div>
 						<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 					</div>
-					<!--Footer, inform user the page has ended& provides social media-->
-					<footer>
-						<div>
-							<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
-							<h4>Somerset Trails</h4>
-						</div>
-						<div>
-							<h5>Social Media</h5>
+					
+                    <!--Footer, inform user the page has ended& provides social media-->
+
+					<footer class="footer">
+						<div class="align-vertically">
+							<span class="pr-4 ml-auto"><img title="Somerset Trails" class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths"></span>
+							<span class="pr-4 ml-auto"><a href="https://www.facebook.com/" title="Facebook" target="_blank"
+						rel="noopener"><i class="fab fa-facebook-square"></i></a></span>
+							<span class="pr-4 ml-auto"><a href="https://twitter.com/explore" title="Twitter" target="_blank"
+						rel="noopener"><i class="fab fa-twitter-square"></i></a></span>
+							<span class="pr-4 ml-auto"><a href="https://www.nationaltrail.co.uk/en_GB/" title="National Trails"></a> Trails</span>
 						</div>
 					</footer>
 
@@ -166,6 +173,9 @@ map = new google.maps.Map(document.getElementsByClassName("map-custom")[0], {
       }
 					</script>
 
+					<!--Bootstrap, for footer icon positioning-->
+					<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
 					<!--Jquery-->
 					<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 
@@ -186,9 +196,9 @@ map = new google.maps.Map(document.getElementsByClassName("map-custom")[0], {
 
 					<!--Google maps scripts-->
 
-		<script async defer
-			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwkm-Zl_LpT63IFWXzmGhS8i6vZFf9dM8&callback=initMap">
-		</script>
+					<script async defer
+						src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwkm-Zl_LpT63IFWXzmGhS8i6vZFf9dM8&callback=initMap">
+					</script>
 </body>
 
 </html>
