--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!--WS3 Css, provide slideshow animation-->
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-	<!--font awesome, provides icons-->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+	<!--font awesome, provides social media icons-->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+
 	<!--css, provide site with color& animation-->
 	<link href="assets/css/style.css" rel="stylesheet">
 
@@ -19,13 +21,6 @@
 	<link
 		href="https://raw.githubusercontent.com/michodgs24/Somerset-Trails/master/assets/css/images/favicon/favicon-16x16.png"
 		rel="#">
-	<!--Google map height& width-->
-	<style>
-		#map {
-			height: 30rem;
-			width: 100%;
-		}
-	</style>
 </head>
 
 <body>
@@ -153,6 +148,7 @@
 		<br>
 
 		<!--Scroll back to top button, add ease of use for user-->
+
 		<div>
 			<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 		</div>
@@ -160,13 +156,14 @@
 		<!--Footer section, display social media& informs viewer they have reached end of page-->
 
 		<footer class="footer">
-			<div>
-				<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
-</div>
-				<h4>Somerset Trails</h4>
-				<div>
-					<h5>Social Media</h5>
-				</div>
+			<div class="align-vertically">
+				<span class="pr-4 ml-auto"><img title="Somerset Trails" class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths"></span>
+				<span class="pr-4 ml-auto"><a href="https://www.facebook.com/" title="Facebook" target="_blank"
+						rel="noopener"><i class="fab fa-facebook-square"></i></a></span>
+				<span class="pr-4 ml-auto"><a href="https://twitter.com/explore" title="Twitter" target="_blank"
+						rel="noopener"><i class="fab fa-twitter-square"></i></a></span>
+				<span class="pr-4 ml-auto"><a href="https://www.nationaltrail.co.uk/en_GB/" title="National Trails"></a>Trails</span>
+			</div>
 		</footer>
 
 		<!--Scripts-->
@@ -207,13 +204,16 @@ map = new google.maps.Map(document.getElementsByClassName("map-custom")[0], {
       }
 		</script>
 
+		<!--Bootstrap, for footer icon positioning-->
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
 		<!--Jquery-->
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 
 		<!--Popper-->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 
-		<!--texts JS-->
+		<!--texts JS, for text interactivity-->
 		<script src="scripts/js/text.js"></script>
 
 		<!--Scroll button JS-->
