--- a/somerset-coastal.html
+++ b/somerset-coastal.html
@@ -137,7 +137,7 @@
 						rel="noopener"><i class="fab fa-facebook-square"></i></a></span>
 							<span class="pr-4 ml-auto"><a href="https://twitter.com/explore" title="Twitter" target="_blank"
 						rel="noopener"><i class="fab fa-twitter-square"></i></a></span>
-							<span class="pr-4 ml-auto"><a href="https://www.nationaltrail.co.uk/en_GB/" title="National Trails"></a> Trails</span>
+							<span class="pr-4 ml-auto"><a href="https://www.nationaltrail.co.uk/en_GB/" title="National Trails"></a>National Trails</span>
 						</div>
 					</footer>
 
