--- a/cheddar-gorge.html
+++ b/cheddar-gorge.html
@@ -4,24 +4,24 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
-    <!--WS3 Css, provide slideshow animation-->
+
+	<!--WS3 Css, provide slideshow animation-->
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-	
+
 	<!--font awesome, provides social media icons-->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-	
-    <!--css, site color& animation-->
+
+	<!--css, site color& animation-->
 	<link href="assets/css/style.css" rel="stylesheet">
 
 	<title>Cheddar gorge</title>
 
 	<!--Favicon 32x32-->
-	<link rel="icon" type="image/png" sizes="32x32" href="..assets/images/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="..assets/images/favicon-32x32.png" alt="Browser icon">
 	<!--Favicon 16x16, site icon-->
 	<link
 		href="https://raw.githubusercontent.com/michodgs24/Somerset-Trails/master/assets/css/images/favicon/favicon-16x16.png"
-		rel="#">
+		alt="Browser icon" rel="#">
 </head>
 
 <body>
@@ -29,10 +29,10 @@
 	<!--navigation top of page, for ease of use-->
 
 	<nav class="topnav">
-		<a href="index.html" class="w3-bar-item w3-button w3-green"><i class="fa fa-home"></i></a>
+		<a href="index.html" class="w3-bar-item w3-button w3-green"><i class="fa fa-home" alt="Home icon"></i></a>
 		<div class="dropdown">
 			<button class="dropbtn">Somerset Trails
- <i class="fa fa-caret-down"></i>
+ <i class="fa fa-caret-down" alt="Dropdown icon"></i>
  </button>
 			<div class="dropdown-content">
 				<a href="staple.html" title="Staple Hill">Staple Hill</a>
@@ -106,7 +106,7 @@
 					<section class="bottom-nav">
 						<h6>Explore our trails</h6>
 						<div class="dropup">
-							<button class="dropbtn">Explore</button>
+							<button class="dropbtn" alt="Dropup button">Explore</button>
 							<div class="dropup-content">
 								<a href="index.html" title="Home">Home</a>
 								<a href="staple.html" title="Staple Hill">Staple Hill</a>
@@ -122,20 +122,20 @@
 					<br>
 
 					<!--Scroll back to top button-->
-					
-                    <div>
-						<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+
+					<div>
+						<button onclick="topFunction()" id="myBtn" title="Go to top" alt="Scroll to top button">Top</button>
 					</div>
-					
-                    <!--Footer, inform user the page has ended& provides social media-->
+
+					<!--Footer, inform user the page has ended& provides social media-->
 
 					<footer class="footer">
 						<div class="align-vertically">
 							<span class="pr-4 ml-auto"><img title="Somerset Trails" class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths"></span>
 							<span class="pr-4 ml-auto"><a href="https://www.facebook.com/" title="Facebook" target="_blank"
-						rel="noopener"><i class="fab fa-facebook-square"></i></a></span>
+						rel="noopener"><i class="fab fa-facebook-square" alt="Facebook icon"></i></a></span>
 							<span class="pr-4 ml-auto"><a href="https://twitter.com/explore" title="Twitter" target="_blank"
-						rel="noopener"><i class="fab fa-twitter-square"></i></a></span>
+						rel="noopener"><i class="fab fa-twitter-square" alt="Twitter icon"></i></a></span>
 							<span class="pr-4 ml-auto"><a href="https://www.nationaltrail.co.uk/en_GB/" title="National Trails"></a>National Trails</span>
 						</div>
 					</footer>
@@ -173,26 +173,19 @@ map = new google.maps.Map(document.getElementsByClassName("map-custom")[0], {
       }
 					</script>
 
-					<!--Bootstrap, for footer icon positioning-->
-					<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-
 					<!--Jquery-->
-					<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+					<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+						integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
+					</script>
 
 					<!--Popper-->
 					<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 
-					<!--texts JS-->
-					<script src="scripts/js/text.js"></script>
+					<!--Navigation, slideshow, scroll& text JS-->
+					<script src="scripts/js/app.js"></script>
 
-					<!--Scroll button JS-->
-					<script src="scripts/js/scroll.js"></script>
-
-					<!--Navigation bar JS-->
-					<script src="scripts/js/nav.js"></script>
-
-					<!--Slideshow JS-->
-					<script src="scripts/js/slide.js"></script>
+					<!--Bootstrap, for footer icon positioning-->
+					<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
 					<!--Google maps scripts-->
 
