Update footer section& add js to footer icons

--- a/cheddar-gorge.html
+++ b/cheddar-gorge.html
@@ -132,11 +132,11 @@
 					<footer class="footer">
 						<div class="align-vertically">
 							<span class="pr-4 ml-auto"><img title="Somerset Trails" class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths"></span>
-							<span class="pr-4 ml-auto"><a href="https://www.facebook.com/" title="Facebook" target="_blank"
+							<span class="pr-4-ml-auto"><a href="index.html" title="Home">Home</a>
+                            <span class="pr-4 ml-auto"><a href="https://www.facebook.com/" title="Facebook" target="_blank"
 						rel="noopener"><i class="fab fa-facebook-square" alt="Facebook icon"></i></a></span>
 							<span class="pr-4 ml-auto"><a href="https://twitter.com/explore" title="Twitter" target="_blank"
 						rel="noopener"><i class="fab fa-twitter-square" alt="Twitter icon"></i></a></span>
-							<span class="pr-4 ml-auto"><a href="https://www.nationaltrail.co.uk/en_GB/" title="National Trails"></a>National Trails</span>
 						</div>
 					</footer>
 
