--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="..assets/images/favicon-32x32.png" alt="Browser icon">
 	<!--Favicon 16x16, browser window icon-->
 	<link
-		href="https://raw.githubusercontent.com/michodgs24/Somerset-Trails/master/assets/css/images/favicon/favicon-16x16.png" alt="Browser icon"
-		rel="#">
+		href="https://raw.githubusercontent.com/michodgs24/Somerset-Trails/master/assets/css/images/favicon/favicon-16x16.png"
+		alt="Browser icon" rel="#">
 </head>
 
 <body>
@@ -45,9 +45,10 @@
 	</nav>
 
 	<!--cover picture, welcomes user to page-->
-	<section>
-		<div class="banner">
-			<h4 class="headline">Explore the best trails one step at a time</h4>
+	<section class="banner">
+		<div class="banner-outer">
+			<br>
+			<h4>Explore the best trails one step at a time</h4>
 		</div>
 	</section>
 
@@ -158,11 +159,11 @@
 		<footer class="footer">
 			<div class="align-vertically">
 				<span class="pr-4 ml-auto"><img title="Somerset Trails" class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths"></span>
+                <span class="pr-4-ml-auto"><a href="index.html" title="Home">Home</a>
 				<span class="pr-4 ml-auto"><a href="https://www.facebook.com/" title="Facebook" target="_blank"
 						rel="noopener"><i class="fab fa-facebook-square" alt="Facebook icon"></i></a></span>
 				<span class="pr-4 ml-auto"><a href="https://twitter.com/explore" title="Twitter" target="_blank"
 						rel="noopener"><i class="fab fa-twitter-square" alt="Twitter icon"></i></a></span>
-				<span class="pr-4 ml-auto"><a href="https://www.nationaltrail.co.uk/en_GB/" title="National Trails" target="_blank" rel="noopener"></a>National Trails</span>
 			</div>
 		</footer>
 
@@ -205,15 +206,16 @@ map = new google.maps.Map(document.getElementsByClassName("map-custom")[0], {
 		</script>
 
 		<!--Jquery-->
-		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+		<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+			integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
 		<!--Popper-->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 
-        <!--Navigation, slideshow, scroll& text JS-->
-        <script src="scripts/js/app.js"></script>
+		<!--Navigation, slideshow, scroll& text JS-->
+		<script src="scripts/js/app.js"></script>
 
-        <!--Bootstrap, for footer icon positioning-->
+		<!--Bootstrap, for footer icon positioning-->
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
 		<!--Google maps scripts-->
